@@ -81,6 +81,8 @@ ajp_request_stock_callback(void *ctx, struct stock_item *item)
 
         ajp_client_request(hr->pool,
                            tcp_stock_item_get(item),
+                           tcp_stock_item_get_domain(item) == AF_LOCAL
+                           ? ISTREAM_SOCKET : ISTREAM_TCP,
                            &ajp_socket_lease, hr,
                            hr->protocol, hr->remote_addr,
                            hr->remote_host, hr->server_name,
