@@ -5,6 +5,7 @@ cm4all-beng-proxy (0.8.7) unstable; urgency=low
   * response, widget-http: apply istream_pipe to filter input
   * proxy-handler: apply istream_pipe to request body
   * istream-ajp-body: send larger request body packets
+  * ajp-client: support splice()
   * merged release 0.7.46
 
  --
